@@ -117,6 +117,8 @@ def install(i):
               (ask_version)       - ask for the version of the package the user wants to install
 
               (debug)             - if 'yes', open shell before installing but with all resolved deps
+
+              (quiet)             - if 'yes', install default package (answer 0 to selection questions)
             }
 
     Output: {
@@ -140,6 +142,8 @@ def install(i):
        oo=o
 
     ask=i.get('ask','')
+
+    quiet=i.get('quiet','').strip().lower()
 
     xtags=i.get('tags','')
     xor_tags=i.get('or_tags','')
@@ -362,11 +366,12 @@ def install(i):
                         ver_options.append( skip_display_line )
 
                     select_adict = ck.access({'action': 'select_string',
-                                    'module_uoa': 'misc',
-                                    'options': ver_options,
-                                    'default': '0',
-                                    'no_skip_line': 'yes',
-                                    'question': 'Please select the package to install',
+                                      'module_uoa': 'misc',
+                                      'options': ver_options,
+                                      'default': '0',
+                                      'select_default': quiet,
+                                      'no_skip_line': 'yes',
+                                      'question': 'Please select the package to install',
                     })
                     if select_adict['return']>0: return select_adict
 
@@ -495,14 +500,19 @@ def install(i):
              j+=1
 
         ck.out('')
-        x=input('Please select a variation or press Enter for the default one (0): ')
 
-        x=x.strip()
-        if x=='': x='0'
+        if quiet!='yes':
+           x=input('Please select a variation or press Enter for the default one (0): ')
 
-        ix=int(x)
-        if ix<0 or ix>=j:
-            return {'return':1, 'error':'variation number is not recognized'}
+           x=x.strip()
+           if x=='': x='0'
+
+           ix=int(x)
+           if ix<0 or ix>=j:
+               return {'return':1, 'error':'variation number is not recognized'}
+        else:
+           ck.out('Selected 0 (default)')
+           ix=0
 
         required_variations=[key_variation[ix]]
 
@@ -815,6 +825,7 @@ def install(i):
            'deps_cache':deps_cache,
            'dep_add_tags': dep_add_tags,
            'safe':safe,
+           'quiet':quiet,
            'deps':udeps}
        if o=='con': env_resolve_action_dict['out']='con'
 
@@ -863,7 +874,7 @@ def install(i):
        }
 
     if o=='con': param_dict_for_pre_path['interactive']='yes'
-    if i.get('quiet','')=='yes': param_dict_for_pre_path['interactive']=''
+    if quiet=='yes': param_dict_for_pre_path['interactive']=''
 
     rx = internal_run_if_present(customization_script, 'pre_path', param_dict_for_pre_path, pr_env)
     if rx['return']>0: return rx
@@ -1229,7 +1240,7 @@ def install(i):
        }
 
     if o=='con': param_dict_for_post_deps['interactive']='yes'
-    if i.get('quiet','')=='yes': param_dict_for_post_deps['interactive']=''
+    if quiet=='yes': param_dict_for_post_deps['interactive']=''
 
     rx = internal_run_if_present(customization_script, 'post_deps', param_dict_for_post_deps, pr_env)
     if rx['return']>0: return rx
@@ -1389,7 +1400,7 @@ def install(i):
              }
 
           if o=='con': param_dict_for_setup['interactive']='yes'
-          if i.get('quiet','')=='yes': param_dict_for_setup['interactive']=''
+          if quiet=='yes': param_dict_for_setup['interactive']=''
 
           param_dict_for_post_setup=copy.deepcopy(param_dict_for_setup)
 
