@@ -1,3 +1,6 @@
+20210418:
+  * added --quiet flag to automatically enter default anser to most questions
+
 20210416:
   * [gfursin] extended module:package to ask a user to select a variation 
     for a given package when there are multiple versions available.
